--- a/Mil_06_html/styles/Mil_06.css
+++ b/Mil_06_html/styles/Mil_06.css
@@ -202,7 +202,7 @@ body{
     margin: 10px;
     position: relative;
     top: 0;
-    width: 898px;
+    /* width: 898px; ~botros */
     clear: both;
 }
 
