--- a/DragDrop_html/styles/dragdrop_dlilearn.css
+++ b/DragDrop_html/styles/dragdrop_dlilearn.css
@@ -120,7 +120,7 @@ html body {
     color: #444444;
     font-family: Arial,Helvetica,sans-serif;
     letter-spacing: 2px;
-    line-height: 20px;
+   /* line-height: 20px;*/
     position: absolute;
 }
 .roundCorners {
@@ -211,10 +211,11 @@ html body {
 }
 .dragBubbleText {
     cursor: default;
-    font-size: 14px;
+    font-size: 12px;
     background-color:yellow;
     min-height:15px;
     max-height: 32px;
+    vertical-align: middle;    
 }
 
 .playBtn {
@@ -233,13 +234,14 @@ html body {
 }
 .dropTargetText {
     cursor: default;
-    font-size: 14px;
+    font-size: 12px;
     left: 5px;
     top: 6px;
     background-color:yellow;
     min-height:15px;
     max-height: 32px;
-} 
+    vertical-align: middle;    
+}
 
 
 .dragBubble {
@@ -298,6 +300,7 @@ html body {
       bottom:5px;  
       background-color:orange;  */
       margin-top:2px;
+          vertical-align: middle;
 }
 
 .dropTargetTextContainer {
@@ -309,5 +312,7 @@ html body {
 }
 
 .mCSB_container {
-    padding:5px 5px 5px 5px;
+    padding-left:5px;
+    padding-top:2px;
+    margin-right:15px;
 }
