--- a/Enabling_04_html/styles/Enabling_04_dliLearn.css
+++ b/Enabling_04_html/styles/Enabling_04_dliLearn.css
@@ -65,15 +65,17 @@ html body {
     margin: 1px;
     font-size: 20px;
     letter-spacing: 2px;
+	padding:10px 0px 0px 10px;
 }
 #feedbackText {
+	margin:0px;
     overflow: auto;
-    max-height: 130px;
+    padding:0px 10px 0px 10px;
 }
 #feedbackBtn {
     bottom: 10px;
     position: absolute;
-    right: 26px;
+    right: 10px;
 }
 
 #main{
@@ -82,7 +84,7 @@ html body {
 
 #prevBtnDiv {
 	left: 8px;
-    position: absolute;
+    position: absolute;    
 	top: 56px;
 }
 
@@ -117,7 +119,7 @@ html body {
     height: 61px;
     position: absolute;
     top: 178px;
-    width: 558px;
+    width: 504px;
     padding-top: 2px;
 }
 
@@ -129,13 +131,13 @@ html body {
     box-shadow: 0 2px 4px #BDBDBD;
     display: block;
     margin: 0 0 0 7px;
-    padding: 20px;
+    padding: 0px;
     position: absolute;
     width: 170px;
-	min-height: 259px;
-	max-height: 259px;
-	width: 210px;
-	left: 575px;
+	min-height: 302px;
+	max-height: 302px;
+	width: 305px;
+	left: 515px;
 	z-index: 1002;
 	top: 177px;
 }
@@ -146,7 +148,7 @@ html body {
  	font-size: 24px;
  	text-align: center;
  	position: absolute;
- 	width: 547px;
+ 	width: 503px;
  	padding: 5px;
 }
 
@@ -178,7 +180,7 @@ html body {
     text-align: center;
     top: 260px;
     vertical-align: middle;
-    width: 558px;
+    width: 504px;
 }
 
 
