--- a/Mil_01_html/styles/Mil_01_dlilearn.css
+++ b/Mil_01_html/styles/Mil_01_dlilearn.css
@@ -56,17 +56,17 @@ html body {
 #engSelectable .ui-selecting { background: #FECA40; }
 #engSelectable .ui-selected { background: #f6a816; color: white; }
 #engSelectable { list-style-type: none; margin: 0; padding: 0; width: 100%; }
-#engSelectable li { margin: 3px; padding: 0.4em; font-size: 12pt; height: auto; }     /*height: 18px;   font-family: 'FuturaMedium';  */
+#engSelectable li { margin: 3px; padding: 0.4em; font-size: 12px; height: auto; }     /*height: 18px;   font-family: 'FuturaMedium';  */
 
 #transliSelectable .ui-selecting { background: #FECA40; }
 #transliSelectable .ui-selected { background: #f6a816; color: white; }
 #transliSelectable { list-style-type: none; margin: 0; padding: 0; width: 100%; }
-#transliSelectable li { margin: 3px; padding: 0.4em; font-size: 12pt; height: auto;   }  /*height: 18px;    font-family: 'FuturaMedium';*/
+#transliSelectable li { margin: 3px; padding: 0.4em; font-size: 12px; height: auto;   }  /*height: 18px;    font-family: 'FuturaMedium';*/
 
 #transSelectable .ui-selecting { background: #FECA40; }
 #transSelectable .ui-selected { background: #f6a816; color: white; } 
 #transSelectable { list-style-type: none; margin: 0; padding: 0; width: 100%; }
-#transSelectable li { margin: 3px; padding: 0.4em; font-size: 12pt; height: auto;   }          /*height: 18px;   font-family: 'FuturaMedium';  */
+#transSelectable li { margin: 3px; padding: 0.4em; font-size: 12px; height: auto;   }          /*height: 18px;   font-family: 'FuturaMedium';  */
 
 .ui-tabs-panel{
 	overflow: auto;
