--- a/Enabling_02_html/styles/enabling_02_dlilearn.css
+++ b/Enabling_02_html/styles/enabling_02_dlilearn.css
@@ -232,7 +232,7 @@ html body {
 }
 #dropTarget_1 {
     box-shadow: -1px 1px 6px grey inset;
-    height: 35px;
+    height: 45px;
     left: 20px;
     margin-left: 15px;
     margin-top: 5px;
@@ -242,7 +242,7 @@ html body {
 }
 #dropTarget_2 {
     box-shadow: -1px 1px 6px grey inset;
-    height: 35px;
+    height: 45px;
     left: 197px;
     margin-left: 25px;
     margin-top: 5px;
@@ -252,7 +252,7 @@ html body {
 }
 #dropTarget_3 {
     box-shadow: -1px 1px 6px grey inset;
-    height: 35px;
+    height: 45px;
     left: 385px;
     margin-left: 25px;
     margin-top: 5px;
@@ -266,7 +266,8 @@ html body {
     border: thin solid #B8B8B8;
     border-radius: 3px 3px 3px 3px;
     box-shadow: 0 1px 0 0 #FFFFFF, 0 5px 11px 2px rgba(119, 119, 119, 0.4) inset;
-    height: 121px;
+    /* height: 121px; */
+    height: 141px;
     left: 12px;
     margin: 10px;
     position: relative;
@@ -276,16 +277,20 @@ html body {
 #container_2_layer_1 {
     position: absolute;
     width: 577px;
+    height: 45px;
+
 }
 #container_2_layer_2 {
     position: absolute;
     width: 577px;
+    height: 45px;
+
 }
 #dragTarget_1 {
     background-color: darkGray;
     border: 3px solid darkGray;
     float: left;
-    height: 35px;
+    height: 45px;
     margin-left: 15px;
     margin-top: 15px;
     width: 165px;
@@ -294,7 +299,7 @@ html body {
     background-color: darkGray;
     border: 3px solid darkGray;
     float: left;
-    height: 35px;
+    height: 45px;
     margin-left: 19px;
     margin-top: 15px;
     width: 165px;
@@ -303,7 +308,7 @@ html body {
     background-color: darkGray;
     border: 3px solid darkGray;
     float: left;
-    height: 35px;
+    height: 45px;
     margin-left: 19px;
     margin-top: 15px;
     width: 165px;
@@ -312,7 +317,7 @@ html body {
     background-color: darkGray;
     border: 3px solid darkGray;
     float: left;
-    height: 35px;
+    height: 45px;
     margin-left: 15px;
     margin-top: 8px;
     width: 165px;
@@ -321,7 +326,7 @@ html body {
     background-color: darkGray;
     border: 3px solid darkGray;
     float: left;
-    height: 35px;
+    height: 45px;
     margin-left: 19px;
     margin-top: 8px;
     width: 165px;
@@ -330,7 +335,7 @@ html body {
     background-color: darkGray;
     border: 3px solid darkGray;
     float: left;
-    height: 35px;
+    height: 45px;
     margin-left: 19px;
     margin-top: 8px;
     width: 165px;
@@ -339,7 +344,7 @@ html body {
     background-color: darkkhaki;
     border: 3px solid darkkhaki;
     float: left;
-    height: 35px;
+    height: 45px;
     margin-left: 15px;
     margin-top: 15px;
     width: 165px;
@@ -348,7 +353,7 @@ html body {
     background-color: darkkhaki;
     border: 3px solid darkkhaki;
     float: left;
-    height: 35px;
+    height: 45px;
     margin-left: 19px;
     margin-top: 15px;
     width: 165px;
@@ -357,7 +362,7 @@ html body {
     background-color: darkkhaki;
     border: 3px solid darkkhaki;
     float: left;
-    height: 35px;
+    height: 45px;
     margin-left: 19px;
     margin-top: 15px;
     width: 165px;
@@ -366,7 +371,7 @@ html body {
     background-color: darkkhaki;
     border: 3px solid darkkhaki;
     float: left;
-    height: 35px;
+    height: 45px;
     margin-left: 15px;
     margin-top: 8px;
     width: 165px;
@@ -375,7 +380,7 @@ html body {
     background-color: darkkhaki;
     border: 3px solid darkkhaki;
     float: left;
-    height: 35px;
+    height: 45px;
     margin-left: 19px;
     margin-top: 8px;
     width: 165px;
@@ -384,7 +389,7 @@ html body {
     background-color: darkkhaki;
     border: 3px solid darkkhaki;
     float: left;
-    height: 35px;
+    height: 45px;
     margin-left: 19px;
     margin-top: 8px;
     width: 165px;
