--- a/Enabling_14a_html/styles/enabling_14a_dlilearn.css
+++ b/Enabling_14a_html/styles/enabling_14a_dlilearn.css
@@ -108,9 +108,11 @@ html body {
 #clickGuard {
 	opacity: .2;
 	position: relative;
-	width: 840px;
-	height: 460px;
+	width: 740px;
+	height: 400px;
 	background-color: gray;
+	z-index:1000;
+	
 }
 
 .phoneNum:nth-child(odd){
@@ -150,6 +152,14 @@ html body {
 	user-select: none;
 }
 
+#displayText{
+		width: 260px;
+	height: 60px;
+	margin:0px 3px 0px 3px;
+	padding:0px;
+	text-align:center;
+	
+	}
 .number:hover {
 	background-color: darkgray;
 	background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(darkgrey), to(#737373));
@@ -321,7 +331,7 @@ html body {
 #container {
 	float: left   ;
 	/*added*/
-	width : 576px;
+	width : 470px;
 }
 
 #mainContent {
@@ -411,8 +421,17 @@ body {
 }
 
 #main {
-	height: 418px;
+	margin:0px auto 0px auto;
+	height: 400px;
 	/*added*/
-	width:842px;
+	width:740px;
+	background-color:#999;
+	-webkit-border-radius:5px;
+	-moz-border-radius:5px;
+	border-radius:5px;
+	border:1px solid #cecece;
+	box-shadow: 0px 1px 2px #cecece;
+    -moz-box-shadow: 0px 1px 2px #cecece;
+    -webkit-box-shadow: 0px 1px 2px #cecece;	
 }
 
