--- a/Enabling_09_html/styles/Enabling_09_dliLearn.css
+++ b/Enabling_09_html/styles/Enabling_09_dliLearn.css
@@ -24,7 +24,7 @@
     width: 820px;
 }
 #setDiv {
-    left: 705px;
+    left: 700px;
 }
 .activity_description {
     font-family: inherit;
@@ -68,12 +68,13 @@ html body {
 #videoContainer {
     background-color: grey;
     border-radius: 0 0 0 0;
-    height: 243px;
+    height: 240px;
     left: 520px;
-    position: absolute;
+    position: relative;
     top: 30px;
-    width: 324px;
+    width: 320px;
 }
+
 .displayNone {
     display: none;
 }
@@ -85,7 +86,8 @@ html body {
     border: 1px solid #E3E3E3;
 }
 #videoTag {
-    height: 242px;
+    width: 320px;
+    height: 240px;
 }
 .playBtn {
     height: 50px;
@@ -171,7 +173,7 @@ html body {
     padding: 20px;
     position: absolute;
     top: 283px;
-    width: 326px;
+    width: 321px;
     z-index: 100;
 }
 #feedbackBtn {
@@ -185,7 +187,7 @@ html body {
     margin-top: -10px;
 }
 #feedbackText {
-    width: 295px;
+    width: 290px;
     min-height: 110px;
     max-height: 110px;
     overflow: auto;
