--- a/Capstone_05_html/styles/Capstone_05_default.css
+++ b/Capstone_05_html/styles/Capstone_05_default.css
@@ -31,7 +31,7 @@ html, body {
 	height: auto;
 	/* width: 910px; */
 	width: 860px;
-	font-family: 'FuturaMedium';
+	/*font-family: 'FuturaMedium';*/
 }
 
 #activity_wrapper {
@@ -41,6 +41,7 @@ html, body {
 	margin-right: -12px;
 	/* width:910px;  */
 	width: 860px; 
+	font-family: 'Arial';
 }
 
 .activity_area {
