--- a/WarmUp_02_html/styles/WarmUp_02_default.css
+++ b/WarmUp_02_html/styles/WarmUp_02_default.css
@@ -31,7 +31,7 @@ html, body {
 	height: auto;
 	/* width: 910px; */
 	width: 850px;
-	font-family: 'FuturaMedium';
+	/*font-family: 'FuturaMedium';*/
 	
 	padding-left: 5px;
 	overflow:hidden;
@@ -47,6 +47,7 @@ html, body {
 	margin-right: -12px;
 	/* width:910px;  */
 	width: 850px;
+	font-family: 'Arial';
 }
 
 .activity_area {
