--- a/Enabling_02_html/styles/Enabling_02.css
+++ b/Enabling_02_html/styles/Enabling_02.css
@@ -55,7 +55,6 @@
     border-style: solid;
     border-width: 1px;
     box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2) inset, 0 1px 2px rgba(0, 0, 0, 0.05);
-    color: #333333;
     cursor: default;
     display: inline-block;
     font-size: 14px;
@@ -75,30 +74,60 @@
     margin: 10px;
     position: relative;
     top: 0;
-    width: 898px;
+    width: 850px;
 }
 #setDiv {
     background-color: #F5F5F5;
     cursor: default;
     height: 30px;
-    left: 610px;
+    left: 744px;
     position: relative;
     top: 5px;
     width: 115px;
     z-index: 0;
 }
 #clickGuard {
-    background-color: grey;
+    background-color: gray;
     display: none;
-    height: 426px;
-    left: 266px;
+    height: 415px;
+    left: 235px;
     opacity: 0.1;
     position: absolute;
     top: -11px;
-    width: 671px;
+    width: 625px;
     z-index: 166;
 }
 
+
+#activityClickGuard {
+    background-color: gray;
+    display: none;
+    height: 415px;
+    left: 0px;
+    opacity: 0.1;
+    position: absolute;
+    top: -11px;
+    width: 850px;
+    z-index: 166;
+}
+
+.activity_description {
+    display: block;
+    font-family: inherit;
+    font-size: 12px;
+    letter-spacing: 2px;
+    margin-bottom: 20px;
+    margin-left: 26px;
+    margin-top: -19px;
+}
+.activity_hd {
+    color: grey;
+    display: block;
+    font-family: inherit;
+    font-size: 22px;
+    margin-left: 26px;
+    margin-top: -2px;
+}
 html body {
     background-color: #F5F5F5;
     color: #444444;
@@ -118,7 +147,7 @@ html body {
     float: left;
     font-size: 16px;
     height: 40px;
-    margin: 13px 2px 2px 19px;
+    margin: 13px 2px 2px 0px;
     width: 180px;
 }
 #feedback {
@@ -129,14 +158,14 @@ html body {
     box-shadow: 0 2px 4px #BDBDBD;
     display: block;
     float: left;
-    left: 19px;
+    left: 0px;
     margin: 0 0 0 7px;
     max-height: 261px;
     min-height: 261px;
     padding: 20px;
     position: absolute;
     top: 101px;
-    width: 185px;
+    width: 170px;
     z-index: 1000;
 }
 #feedbackHeader {
@@ -145,13 +174,14 @@ html body {
     margin-top: -13px;
 }
 #feedbackText {
-    height: 269px;
-    overflow: auto;
+    margin-top: -3px;
+    width:182px;
+    margin-right:5px;
 }
 #feedbackBtn {
     bottom: 10px;
     position: absolute;
-    right: 26px;
+    right: 10px;
 }
 #container_1 {
     background-color: #F5F5F5;
@@ -212,15 +242,15 @@ html body {
     border-radius: 3px 3px 3px 3px;
     box-shadow: 0 2px 4px #BDBDBD;
     height: 401px;
-    left: 286px;
+    left: 235px;
     position: relative;
     width: 623px;
 }
 #dropTarget_1 {
     box-shadow: -1px 1px 6px grey inset;
-    height: 35px;
+    height: 40px;
     left: 20px;
-    margin-left: 15px;
+    margin-left: 12px;
     margin-top: 5px;
     position: absolute;
     top: 170px;
@@ -228,9 +258,9 @@ html body {
 }
 #dropTarget_2 {
     box-shadow: -1px 1px 6px grey inset;
-    height: 35px;
+    height: 40px;
     left: 197px;
-    margin-left: 25px;
+    margin-left: 21px;
     margin-top: 5px;
     position: absolute;
     top: 170px;
@@ -238,9 +268,9 @@ html body {
 }
 #dropTarget_3 {
     box-shadow: -1px 1px 6px grey inset;
-    height: 35px;
+    height: 40px;
     left: 385px;
-    margin-left: 25px;
+    margin-left: 22px;
     margin-top: 5px;
     position: absolute;
     top: 170px;
@@ -271,7 +301,7 @@ html body {
     background-color: darkGray;
     border: 3px solid darkGray;
     float: left;
-    height: 35px;
+    height: 40px;
     margin-left: 15px;
     margin-top: 15px;
     width: 165px;
@@ -280,7 +310,7 @@ html body {
     background-color: darkGray;
     border: 3px solid darkGray;
     float: left;
-    height: 35px;
+    height: 40px;
     margin-left: 19px;
     margin-top: 15px;
     width: 165px;
@@ -289,7 +319,7 @@ html body {
     background-color: darkGray;
     border: 3px solid darkGray;
     float: left;
-    height: 35px;
+    height: 40px;
     margin-left: 19px;
     margin-top: 15px;
     width: 165px;
@@ -298,7 +328,7 @@ html body {
     background-color: darkGray;
     border: 3px solid darkGray;
     float: left;
-    height: 35px;
+    height: 40px;
     margin-left: 15px;
     margin-top: 8px;
     width: 165px;
@@ -307,7 +337,7 @@ html body {
     background-color: darkGray;
     border: 3px solid darkGray;
     float: left;
-    height: 35px;
+    height: 40px;
     margin-left: 19px;
     margin-top: 8px;
     width: 165px;
@@ -316,7 +346,7 @@ html body {
     background-color: darkGray;
     border: 3px solid darkGray;
     float: left;
-    height: 35px;
+    height: 40px;
     margin-left: 19px;
     margin-top: 8px;
     width: 165px;
@@ -325,7 +355,7 @@ html body {
     background-color: darkkhaki;
     border: 3px solid darkkhaki;
     float: left;
-    height: 35px;
+    height: 40px;
     margin-left: 15px;
     margin-top: 15px;
     width: 165px;
@@ -334,7 +364,7 @@ html body {
     background-color: darkkhaki;
     border: 3px solid darkkhaki;
     float: left;
-    height: 35px;
+    height: 40px;
     margin-left: 19px;
     margin-top: 15px;
     width: 165px;
@@ -343,7 +373,7 @@ html body {
     background-color: darkkhaki;
     border: 3px solid darkkhaki;
     float: left;
-    height: 35px;
+    height: 40px;
     margin-left: 19px;
     margin-top: 15px;
     width: 165px;
@@ -352,7 +382,7 @@ html body {
     background-color: darkkhaki;
     border: 3px solid darkkhaki;
     float: left;
-    height: 35px;
+    height: 40px;
     margin-left: 15px;
     margin-top: 8px;
     width: 165px;
@@ -361,7 +391,7 @@ html body {
     background-color: darkkhaki;
     border: 3px solid darkkhaki;
     float: left;
-    height: 35px;
+    height: 40px;
     margin-left: 19px;
     margin-top: 8px;
     width: 165px;
@@ -370,7 +400,7 @@ html body {
     background-color: darkkhaki;
     border: 3px solid darkkhaki;
     float: left;
-    height: 35px;
+    height: 40px;
     margin-left: 19px;
     margin-top: 8px;
     width: 165px;
@@ -385,12 +415,13 @@ html body {
     bottom: 0;
     cursor: default;
     font-family: Arial,Helvetica,sans-serif;
-    font-size: 17px;
+    font-size: 13px;
     left: 0;
     position: absolute;
     right: 0;
     text-align: center;
-    top: 6px;
+    line-height: 15px;
+    top:15px;
 }
 #nextDiv {
     height: 27px;
@@ -434,7 +465,7 @@ html body {
     z-index: 7;
 }
 #id_prev_next_div {
-    left: 684px;
+    left: 615px;
     position: relative;
     top: -23px;
 }
@@ -445,9 +476,9 @@ html body {
     border-radius: 3px 3px 3px 3px;
     box-shadow: 0 1px 0 0 #FFFFFF, 0 5px 11px 2px rgba(119, 119, 119, 0.4) inset;
     height: 80px;
-    left: 26px;
+    left: 8px;
     position: absolute;
-    width: 222px;
+    width: 210px;
 }
 #main {
     position: relative;
@@ -460,5 +491,10 @@ html body {
     position: absolute;
     top: 0;
     width: 100%;
-    z-index: 9;
+    z-index: 9 !important;
+}
+
+.content2{
+    height: 200px;
+    overflow-y: auto;
 }
