--- a/Enabling_02_html/styles/enabling_02_dlilearn.css
+++ b/Enabling_02_html/styles/enabling_02_dlilearn.css
@@ -89,12 +89,12 @@
 #clickGuard {
     background-color: grey;
     display: none;
-    height: 426px;
+    height: 415px;
     left: 235px;
     opacity: 0.1;
     position: absolute;
     top: -11px;
-    width: 635px;
+    width: 625px;
     z-index: 166;
 }
 .activity_description {
@@ -161,11 +161,13 @@ html body {
 }
 #feedbackText {
     margin-top: -3px;
+    width:182px;
+    margin-right:5px;
 }
 #feedbackBtn {
     bottom: 10px;
     position: absolute;
-    right: 26px;
+    right: 10px;
 }
 #container_1 {
     background-color: #F5F5F5;
@@ -232,9 +234,9 @@ html body {
 }
 #dropTarget_1 {
     box-shadow: -1px 1px 6px grey inset;
-    height: 35px;
+    height: 40px;
     left: 20px;
-    margin-left: 15px;
+    margin-left: 12px;
     margin-top: 5px;
     position: absolute;
     top: 170px;
@@ -242,9 +244,9 @@ html body {
 }
 #dropTarget_2 {
     box-shadow: -1px 1px 6px grey inset;
-    height: 35px;
+    height: 40px;
     left: 197px;
-    margin-left: 25px;
+    margin-left: 21px;
     margin-top: 5px;
     position: absolute;
     top: 170px;
@@ -252,9 +254,9 @@ html body {
 }
 #dropTarget_3 {
     box-shadow: -1px 1px 6px grey inset;
-    height: 35px;
+    height: 40px;
     left: 385px;
-    margin-left: 25px;
+    margin-left: 22px;
     margin-top: 5px;
     position: absolute;
     top: 170px;
@@ -285,7 +287,7 @@ html body {
     background-color: darkGray;
     border: 3px solid darkGray;
     float: left;
-    height: 35px;
+    height: 40px;
     margin-left: 15px;
     margin-top: 15px;
     width: 165px;
@@ -294,7 +296,7 @@ html body {
     background-color: darkGray;
     border: 3px solid darkGray;
     float: left;
-    height: 35px;
+    height: 40px;
     margin-left: 19px;
     margin-top: 15px;
     width: 165px;
@@ -303,7 +305,7 @@ html body {
     background-color: darkGray;
     border: 3px solid darkGray;
     float: left;
-    height: 35px;
+    height: 40px;
     margin-left: 19px;
     margin-top: 15px;
     width: 165px;
@@ -312,7 +314,7 @@ html body {
     background-color: darkGray;
     border: 3px solid darkGray;
     float: left;
-    height: 35px;
+    height: 40px;
     margin-left: 15px;
     margin-top: 8px;
     width: 165px;
@@ -321,7 +323,7 @@ html body {
     background-color: darkGray;
     border: 3px solid darkGray;
     float: left;
-    height: 35px;
+    height: 40px;
     margin-left: 19px;
     margin-top: 8px;
     width: 165px;
@@ -330,7 +332,7 @@ html body {
     background-color: darkGray;
     border: 3px solid darkGray;
     float: left;
-    height: 35px;
+    height: 40px;
     margin-left: 19px;
     margin-top: 8px;
     width: 165px;
@@ -339,7 +341,7 @@ html body {
     background-color: darkkhaki;
     border: 3px solid darkkhaki;
     float: left;
-    height: 35px;
+    height: 40px;
     margin-left: 15px;
     margin-top: 15px;
     width: 165px;
@@ -348,7 +350,7 @@ html body {
     background-color: darkkhaki;
     border: 3px solid darkkhaki;
     float: left;
-    height: 35px;
+    height: 40px;
     margin-left: 19px;
     margin-top: 15px;
     width: 165px;
@@ -357,7 +359,7 @@ html body {
     background-color: darkkhaki;
     border: 3px solid darkkhaki;
     float: left;
-    height: 35px;
+    height: 40px;
     margin-left: 19px;
     margin-top: 15px;
     width: 165px;
@@ -366,7 +368,7 @@ html body {
     background-color: darkkhaki;
     border: 3px solid darkkhaki;
     float: left;
-    height: 35px;
+    height: 40px;
     margin-left: 15px;
     margin-top: 8px;
     width: 165px;
@@ -375,7 +377,7 @@ html body {
     background-color: darkkhaki;
     border: 3px solid darkkhaki;
     float: left;
-    height: 35px;
+    height: 40px;
     margin-left: 19px;
     margin-top: 8px;
     width: 165px;
@@ -384,7 +386,7 @@ html body {
     background-color: darkkhaki;
     border: 3px solid darkkhaki;
     float: left;
-    height: 35px;
+    height: 40px;
     margin-left: 19px;
     margin-top: 8px;
     width: 165px;
@@ -404,7 +406,8 @@ html body {
     position: absolute;
     right: 0;
     text-align: center;
-    top: 0;
+    line-height: 15px;
+    top:15px;
 }
 #nextDiv {
     height: 27px;
@@ -474,7 +477,7 @@ html body {
     position: absolute;
     top: 0;
     width: 100%;
-    z-index: 9;
+    z-index: 9 !important;
 }
 
 .content2{
