--- a/WarmUp_07_html/styles/WarmUp_07.css
+++ b/WarmUp_07_html/styles/WarmUp_07.css
@@ -1,11 +1,31 @@
+body{
+	background-color:white;	
+	color: #444444;
+}
+
 #main{
+    margin-top: 25px;
+}
+
+#idExampleContainers{
+    clear: both;
 	
 }
 
+
 #idLeftCol{
-    width: 300px;
+    width: 343px;
 	
     float: left;
+	background-image: url("../../common/img/bg_grip_pattern.png");
+    background-repeat: repeat;
+    border: thin solid #B8B8B8;
+    border-radius: 3px 3px 3px 3px;
+    box-shadow: 0 1px 0 0 #FFFFFF, 0 5px 11px 2px rgba(119, 119, 119, 0.4) inset;
+    height: 484px;
+    padding: 10px;
+    margin: 10px;
+    margin-left: 85px;
 }
 
 .playBtnRTL:hover{
@@ -31,12 +51,16 @@
     float: left;
     /* width: 249px; */
     /* background-color: red; */
+    font-size: 23px;
+    padding-top: 20px;
+    padding-left: 3px;
 }
 
 #idPlayBtnLTR,
 #idPlayBtnRTL{
-	width: 20px;
-	height: 20px;
+	width: 35px;
+	height: 35px;
+	margin-top: 13px;
 }
 
 .playBtnLTR:hover{
@@ -51,7 +75,7 @@
 }
 
 #idChar{
-    font-size: 32px;
+    font-size: 45px;
 	
     padding-right: 15px;
     clear: both;
@@ -60,30 +84,46 @@
 #idDesc{
     text-align: left;
 	
+    height: 352px;
+	background: url("../../common/img/bg_dropbubble_50.png") repeat-x scroll center bottom #F5F5F5;
+    border: 1px solid #BDBDBD;
+    border-radius: 3px 3px 3px 3px;
+    box-shadow: 0 2px 4px #BDBDBD;
+
+    padding: 10px;
 }
 
 #idRightCol{
-    width: 200px;
+    width: 275px;
 	
     float: left;
+    padding: 10px;
+    padding-left: 35px;
 }
 
 #idCharGrid{
     width: 100%;
 	
+    margin-bottom: 10px;
 }
 
 #idExample1Container{
     clear: both;
 	
+    padding-top: 20px;
+    padding-bottom: 20px;
+    height: 50px;
+    margin-left: 5px;
+    margin-right: 5px;
+    font-size: 19px;
 }
 
 #idPlayBtnExample1LTR, 
 #idPlayBtnExample1RTL,
 #idPlayBtnExample2LTR,
 #idPlayBtnExample2RTL{
-	width: 20px;
-	height: 20px;
+	width: 25px;
+	height: 25px;
 }
 
 #idExample1En,
@@ -99,10 +139,19 @@
 {
 	clear:both;
 	text-align: right;
+	padding-top: 9px;
 }
 
 #idExample2Container{
+    clear: both;
 	
+    padding-top: 20px;
+    padding-bottom: 20px;
+    height: 50px;
+    margin-left: 5px;
+    margin-right: 5px;	
+    font-size: 19px;
+    border-top: 1px solid #D3D3D3;
 }
 
 #snippets{
@@ -111,18 +160,20 @@
 }
 
 .gridItem:hover{
-	background-color: grey;
+	background-color: #B8B8B8;
 	cursor: pointer;
 }
 
 .gridItem{
-    width: 26px;
+    width: 30px;
 	
     float: left;
-    background-color: lightgray;
+    background-color: #E6E6E6;
     text-align: center;
     margin: 1px;
-    padding: 2px;
+    padding: 9px 3px 3px 3px;
+    height: 25px;
+    border-radius: 3px;
 }
 
 body[dir='rtl'] #idPlayBtnLTR,
