WarmUp_07_html -Started adding support for Japanese ruby tag -Added support for bolding the item character in the example words

--- a/WarmUp_07_html/styles/WarmUp_07.css
+++ b/WarmUp_07_html/styles/WarmUp_07.css
@@ -134,12 +134,18 @@ body{
     /* width: 152px; */
 }
 
+.highlight{
+    display: inline;
+    color: #B43C4B;
+    font-family: FuturaBold;
+}
+
 #idExample1,
 #idExample2
 {
-	clear:both;
 	text-align: right;
 	padding-top: 9px;
+	clear: both;
 }
 
 #idExample2Container{
